--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,38 +5,19 @@ networks:
   project:
 
 services:
-  zoo1:
-    image: zookeeper:3.4.9
-    restart: always
-    hostname: zoo1
+  mongo:
+    image: mongo:4.2.0-bionic
+    container_name: "mongo"
+    command: mongod
+    environment:
+      - MONGO_DATA_DIR=/mongo/data
+      - MONGO_LOG_DIR=/mongo/logs
+      - MONGODB_USER="user"
+      - MONGODB_PASS="pass"
+    volumes:
+      - ./mongo/data:/mongo/data
+    ports:
+      - 27017:27017
     networks:
       - project
-    ports:
-      - "2181:2181"
-    environment:
-      #replicated mode - unique id within zookeeper ensemle
-      ZOO_MY_ID: 1
-      ZOO_PORT: 2181
-      #list of machines of zookeeper ensemle
-      ZOO_SERVERS: server.1=zoo1:2888:3888
 
-  kafka:
-    image: confluentinc/cp-kafka:5.1.0
-    hostname: kafka
-    networks:
-      - project
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:19092,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:19092,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-
-      KAFKA_BROKER_ID: 1
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
-    depends_on:
-      - zoo1
