--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,12 @@ networks:
   project:
 
 services:
-  mongo:
-    image: mongo:4.2.0-bionic
-    container_name: "mongo"
-    command: mongod
-    environment:
-      - MONGO_DATA_DIR=/mongo/data
-      - MONGO_LOG_DIR=/mongo/logs
-      - MONGODB_USER="user"
-      - MONGODB_PASS="pass"
-    volumes:
-      - ./mongo/data:/mongo/data
+  redis:
+    image: redis:alpine
     ports:
-      - 27017:27017
+     - 6379:6379
+    #volumes:
+    #  - redis/redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - project
 
